--- a/pages/index2/index.wxml
+++ b/pages/index2/index.wxml
@@ -1,16 +1,11 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <switch wx:for="{{objectArray}}" wx:key="unique" style="display:block;">{{item.id}}</switch>
-  <button bindtap="switch">Switch</button>
-  <view id="v" class="red">tab2</view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+ <view>{{text}}</view>
+ <button bindtap='changeText'>changeText</button>
+ <view>{{array[0].text}}</view>
+ <button bindtap='changeItemInArray'>changeItemInArray</button>
+ <view>{{object.text}}</view>
+ <button bindtap='changeItemInObject'>changeItemInObject</button>
+ <view>{{newField.text}}</view>
+ <button bindtap='addNewFields'>addNewFields</button>
 </view>
